updated the index file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - MY FAVORITE THINGS. a p2 wip skin</title>
+  <title>Oniicord</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
